--- a/src/app/zone/entrepreneur-zone/entrepreneur-zone.component.html
+++ b/src/app/zone/entrepreneur-zone/entrepreneur-zone.component.html
@@ -1,4 +1,4 @@
-<div class="entrepreneur-zone-container">
+<div class="entrepreneur-zone-container" *ngIf="!showComingSoon">
     <!-- Header -->
     <div class="header">
         <img src="assets/icons/back-arrow.png" alt="Back Icon" routerLink="/home" class="back-button" />
@@ -51,3 +51,8 @@
         </div>
     </div>
 </div>
+<!-- Coming Soon Component -->
+<app-coming-soon *ngIf="showComingSoon" [zoneTitle]="comingSoonData.zoneTitle" [subtitle]="comingSoonData.subtitle"
+    [cardTitle]="comingSoonData.cardTitle" [imageUrl]="comingSoonData.imageUrl"
+    [description]="comingSoonData.description" (backClicked)="showComingSoon = false">
+</app-coming-soon>
