--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,8 +9,8 @@
         </div>
         <div class="profile-card">
             <div class="profile-info">
-                <div class="profile-picture">S</div>
-                <h3>Saakshi Shetty</h3>
+                <img [src]="userProfileImg" alt="" class="name-logo">
+                <h3>{{name}}</h3>
                 <p class="profile-level">GRADUATE LEVEL</p>
             </div>
         </div>
