--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -22,7 +22,7 @@
         <div class="profile-rank">
             <!-- Profile Section -->
             <div class="profile">
-                <div class="name-logo">{{ nameInitial }}</div>
+                <img [src]="userProfileImg" alt="" class="name-logo">
                 <p class="username">{{ name }}</p>
             </div>
 
