--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -52,18 +52,18 @@
   justify-content: center;
 }
 
-.profile-picture {
+.name-logo {
+  width: 80px;
+  height: 80px;
+  background: #34437a;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
-  background: #2b3a67;
-  color: white;
-  font-size: 48px;
   border-radius: 50%;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 15px;
+  font-size: 24px;
+  font-weight: bold;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .profile-info h3 {
