--- a/src/app/shared/zone-details/zone-details.component.html
+++ b/src/app/shared/zone-details/zone-details.component.html
@@ -1,14 +1,15 @@
 <div class="details-container">
     <div class="header">
-        <img src="assets/icons/back-arrow.png" alt="Back Icon" routerLink="/international-zone" class="back-button" />
+        <img src="assets/icons/back-arrow.png" alt="Back Icon" class="back-button" (click)="onBackClick()" />
         <div class="title-container">
-            <h1>International Zone</h1>
+            <h1>Zone Details</h1>
             <img src="assets/icons/long-arrow.png" alt="Arrow" class="long-arrow" />
             <h2>{{ placeName }}</h2>
         </div>
         <img src="assets/icons/category-icon.png" alt="Category Icon" class="header-icon" />
     </div>
 
+    <!-- Content goes here -->
     <div class="content">
         <div *ngFor="let article of articles" class="card">
             <div class="card-header">
@@ -38,7 +39,6 @@
                     <span class="material-icons">thumb_down</span>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
