replaced zone-details component with zone-articles

--- a/src/app/zone/international-zone/international-zone.component.html
+++ b/src/app/zone/international-zone/international-zone.component.html
@@ -40,6 +40,6 @@
 </div>
 
 <!-- Zone Details Component (Will be shown when selected) -->
-<app-zone-details *ngIf="showZoneDetails" [tileCode]="selectedTileCode" [placeName]="selectedPlaceName"
+<app-zone-articles *ngIf="showZoneDetails" [tileCode]="selectedTileCode" [placeName]="selectedPlaceName"
     (backClicked)="onBackClick()">
-</app-zone-details>
+</app-zone-articles>
